# pynsy

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  api_template.py  config.json  pynsy.py  pyproject.toml  requirements.txt  run_instrumented.py  shell-3.7.nix  shell-3.8.nix  shell-3.9.nix
analyses/: example1.py  shape_logger.py
configs/: lint.json  lint.toml  python_type_inference.json  shape_analysis.json  shape_analysis.toml  shape_analysis_haiku.json  shape_inference.json  shape_inference.toml  tensor_shape_inference.json  tensor_shape_inference.toml  type_inference.json
demos/: __init__.py  datasets.py  key_in_list.py  mnist.py  nested.py  quicksort.py  string_add.py
instrumentation/: data_tracing_receiver.py  event_receiver.py  exec.py  frame_util.py  heap_object_tracking.py  instrument.py  instrument_nested.py  load_exec.py  load_store_abstractor.py  load_store_apply.py  module_loader.py  operator_apply.py  shape_logging_receiver.py  stack_tracking_receiver.py  util.py
pynsy/: __init__.py  evaluation.py  main.py  programmatic_usage.py
pynsy/analyses/: example1.py  inference_engine.py  key_in_list_analysis.py  python_type_inference.py  python_type_inference_test.py  shape_analysis.py  shape_inference.py  shape_logger.py  string_add_analysis.py  tensor_shape_inference.py  type_inference.py  type_inference_test.py  util.py
pynsy/demos/: datasets.py  dijkstra_algorithm.py  flag_parsing.py  mnist.py  mnist2.py  nested.py  python_type_inference_example1.py  python_type_inference_example2.py  quicksort.py  string_add.py  test1.py  tf_bert.py  tf_mnist.py
pynsy/instrumentation/: __init__.py  analyzer_handle.py  event_receiver.py  heap_object_tracking.py  instrument.py  instrument_nested.py  load_store_apply.py  logging.py  logging_utils.py  module_loader.py  operator_apply.py  util.py
pynsy/type_inference/: inference_engine.py  python_type_inference.py  python_type_inference_test.py  tensor_shape_inference.py
test/: simple_module_to_import.py  test_complex_exec.py  test_core_constructs_exec.py  test_core_constructs_instrument.py  test_module_instrument.py  util.py
test/snapshots/: snap_test_complex_exec.py  snap_test_core_constructs_exec.py  snap_test_core_constructs_instrument.py  snap_test_module_instrument.py
